# yarp-forge

./: COPYRIGHT  README
main/: README.TXT
main/articulator/: CMakeLists.txt  README.TXT  TRMSynthesizer.h  listen.cc  listen.h  local.h  main.cc  output.cc  remote.cc  tube.cc  wavetable.cc  yarpy.cc
main/attn/: CMakeLists.txt  README.TXT  main.cpp
main/devices/: CMakeLists.txt  README.TXT  empty.world  fakebot.ini  pioneer.inc
main/devices/stage/: FindStage.cmake  config.cmake
main/extend/: CMakeLists.txt  Histogram.h  README.TXT  Unit.h  condition.cpp  condition.h  fetch.cpp  fetch.h  main.cpp  show_seq.m
nonfree/: README.TXT
