
PROJECT(extend)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR} ${CMAKE_MODULE_PATH})

FIND_PACKAGE(Boost REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${BOOST_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
ADD_DEFINITIONS(${BOOST_DEFINITIONS})
LINK_LIBRARIES(${BOOST_LIBRARIES})

ADD_EXECUTABLE(extend main.cpp fetch.cpp condition.cpp fetch.h condition.h)
